Fixed image stretch for profile pic

--- a/src/assets/components/sidebar.module.css
+++ b/src/assets/components/sidebar.module.css
@@ -68,6 +68,9 @@
     border-radius: 4px;
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.25);
     background-image: none;
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: top;
 }
 
 .socials{
